
[package]
name = "sd-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
josekit = "0.8.0"
serde_json = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
base64-url = "1.4.13"
sha2 = "0.10.2"

[lib]
doctest = false