
[package]
name = "sd_jwt"
version = "0.0.2"
edition = "2021"
description = "An implementation of SD-JWT draft."
documentation = "https://docs.rs/sd_jwt"
homepage = "https://github.com/kushaldas/sd_jwt"
repository = "https://github.com/kushaldas/sd_jwt"
license = "MIT OR Apache-2.0"
exclude = ["*.pem"]
readme = "README.md"
categories = ["authentication"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
josekit = "0.8.0"
serde_json = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
base64-url = "1.4.13"
sha2 = "0.10.2"
thiserror = "1"
constant_time_eq = "0.2"
base64 = "0.13"

[lib]
doctest = false

